# Singulr

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RECOVERY.md  autopilot.json  docker-compose.prod.yml  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini
.autopilot/: active.json  runtime.json
.cursor/: hooks.json
contracts/: BanRegistry.sol
data/: social_blocklist.example.json
docs/: AGENT_RUNTIME.md  DEPLOY.md  PRODUCTION_READINESS.md
orchestrator/: __init__.py  __main__.py  autopilot_cursor.py  cli.py  dispatch.py  lessons.py  prd.py  runtime.py  verifier.py
scripts/: autopilot-cursor.ps1  cursor-autopilot-batch.ps1  deploy.js  github-push-loop.ps1  overnight-autopilot-loop.ps1  overnight-loop.ps1  register-github-sync-task.ps1  set-agent-runtime.ps1  start-repo-lead.ps1  stop-github-push-loop.ps1  stop-overnight-loop.ps1  sync-to-github.ps1  unregister-github-sync-task.ps1  verify.ps1  verify.sh
singulr/: __init__.py  config.py  db.py  main.py  models.py
static/: verify.css  verify.html  verify.js
tasks/: HANDOFF_SUMMARY.md  e2e-checklist.md  lanes.json  lessons.md  orchestrator.md  overnight-improve-loop-prompt.txt  overnight-it-tick-prompt.txt  overnight-loop-prompt.txt  prd.json
test/: BanRegistry.test.js
tests/: conftest.py  test_admin_api.py  test_admin_reporting.py  test_api_verify.py  test_autopilot_cursor.py  test_autopilot_integration.py  test_ban_callback.py  test_ban_flow.py  test_ban_taxonomy.py  test_bans.py  test_blockchain.py  test_bot_handlers.py  (+40 more)
(+95 files in other folders)
